Refactor getAllListedStocks to call lastStockPrice concurrently